samples/_failures_safe/1761143047_320b18_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c9795fe9.c: In function ‘tokenize’:
./samples/SAFE/__tmp_c9795fe9.c:149:9: error: expected identifier at end of input
  149 |         if (lexer->input[lexer->
      |         ^~
./samples/SAFE/__tmp_c9795fe9.c:149:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c9795fe9.c:149:9: error: expected declaration or statement at end of input
